Fix overflow in userlist

--- a/styles/main.css
+++ b/styles/main.css
@@ -239,6 +239,7 @@ header {
     margin-left: 4px;
     width: 10%;
     word-wrap: break-word;
+    overflow: auto;
 }
 
 .users {
